--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,111 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.container {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: background-color 0.3s ease;
+}
+
+.timer-container {
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  border: 12px #fff solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  animation: fadeInScale 0.5s ease-in-out;
+}
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 2rem;
+}
+
+.time-list {
+  margin-bottom: 16px;
+}
+
+.time-item {
+  color: white;
+  font-size: 2rem;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.button {
+  background-color: #fff;
+  width: 5rem;
+  padding: 0.5rem 0;
   text-align: center;
+  color: #000;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  border: 1px solid white;
+  margin: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.button:hover {
+  transform: scale(1.05);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:active {
+  transform: scale(0.95);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.play {
+  background-color: green;
+  color: #fff;
 }
 
-.card {
-  padding: 2em;
+.stop {
+  background-color: #FF2A23;
+  color: #fff;
 }
 
-.read-the-docs {
-  color: #888;
+.footer {
+  color: white;
+  font-size: 1rem;
+  margin-top: 130px;
+  text-align: center;
+  width: 100%;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.footer span {
+  color: #ff2a23;
 }
